--- a/content/apache.conf
+++ b/content/apache.conf
@@ -4,3 +4,4 @@ Redirect permanent /release-notes.html /maven-site/releases/
 RedirectMatch permanent ^/apidocs(.*) /maven-site/apidocs$1
 Redirect temp /mooc/ratings http://dev.grouplens.org/ratemovies
 Redirect permanent /download.html /downloads/
+Redirect temp /ML100K http://github.com/grouplens/lenskit/wiki/ML100K
