--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,23 @@
 // inspired by http://blog.freeside.co/post/48926142330/using-sass-and-compass-with-gradle
 
+buildscript {
+    repositories {
+        mavenLocal()
+        maven {
+            url 'https://elehack.net/maven/'
+        }
+    }
+    dependencies {
+        classpath 'net.elehack.gradle:gradle-jruby:0.1-SNAPSHOT'
+    }
+}
+
+import net.elehack.gradle.jruby.*
+
+apply plugin: 'jruby'
+
 repositories {
     mavenCentral()
-}
-
-configurations {
-    jruby
-}
-
-dependencies {
-    jruby group: 'org.jruby', name: 'jruby-complete', version: '1.7.5'
-}
-
-ext {
-    bundlerDir = 'bundler'
-    bundlerScript = file("${bundlerDir}/bin/bundle")
-    bundlerGemPath = file("${bundlerDir}")
 }
 
 def getDeployTarget() {
@@ -30,37 +32,10 @@ def getDeployTarget() {
     }
 }
 
-task installBundler(type: JavaExec) {
-    description "Set up Bundler."
-    classpath = configurations.jruby
-    main = "org.jruby.Main"
-    args '-S', 'gem', 'install', '-i', file(bundlerDir)
-    args '--no-ri', '--no-rdoc'
-    args 'bundler'
-
-    onlyIf {
-        !bundlerScript.exists()
-    }
-}
-
-task setup(type: JavaExec, dependsOn: installBundler) {
-    description "Set up site build dependencies."
-    inputs.file 'Gemfile'
-    outputs.file 'Gemfile.lock'
-    outputs.dir 'gems'
-
-    classpath = configurations.jruby
-    main = "org.jruby.Main"
-    environment('GEM_PATH', bundlerGemPath)
-    args bundlerScript, 'install'
-}
-
-task site(type: JavaExec, group: 'build', dependsOn: setup) {
+task site(type: GemExec, group: 'build') {
     description "Build the web site."
-    classpath = configurations.jruby
-    main = "org.jruby.Main"
-    environment('GEM_PATH', bundlerGemPath)
-    args bundlerScript, 'exec', 'nanoc', 'compile'
+    script 'nanoc'
+    args 'compile'
 }
 
 task deploy(type: Exec, dependsOn: site) {
@@ -70,11 +45,22 @@ task deploy(type: Exec, dependsOn: site) {
     args deployTarget
 }
 
+task debugJRuby << {
+    project.javaexec {
+        main 'org.jruby.Main'
+        classpath project.configurations.jruby
+        environment.remove('GEM_HOME')
+        environment 'GEM_PATH', project.file(project.jruby.bootstrapPath)
+        args '-e', "print 'gem path: ' + ENV['GEM_PATH']"
+        args '-e', "print 'gem home: ' + ENV['GEM_HOME']"
+    }
+}
+
 task clean(type: Delete) {
     delete 'output', 'tmp'
 }
 
 task veryclean(type: Delete, dependsOn: clean) {
     description "Remove boostrapped stuff"
-    delete 'gems', bundlerDir
+    delete jruby.gemRoot
 }
