--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.elehack.gradle:gradle-jruby:0.1-SNAPSHOT'
+        classpath 'net.elehack.gradle:gradle-jruby:0.1'
     }
 }
 
