--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,14 @@ import net.elehack.gradle.jruby.*
 
 apply plugin: 'jruby'
 
+configurations.jruby.dependencies.clear()
+jruby {
+    version '1.7.11'
+}
+dependencies {
+    jruby 'org.jruby:jruby:1.7.11'
+}
+
 repositories {
     mavenCentral()
 }
