--- a/content/apache.conf
+++ b/content/apache.conf
@@ -6,3 +6,11 @@ Redirect temp /mooc/ratings http://dev.grouplens.org/ratemovies
 Redirect permanent /download.html /downloads/
 Redirect temp /ML100K http://github.com/grouplens/lenskit/wiki/ML100K
 RedirectMatch permanent /downloads/(lenskit.*) http://files.grouplens.org/lenskit/releases/$1
+Redirect /news/feed.xml https://github.com/grouplens/lenskit/releases.atom
+Redirect /news https://github.com/grouplens/lenskit/releases
+Redirect /news/2013-10-16-lenskit-2032.html https://github.com/grouplens/lenskit/releases/tag/lenskit-2.0.3.2
+Redirect /news/2013-10-14-lenskit-2031.html https://github.com/grouplens/lenskit/releases/tag/lenskit-2.0.3.1
+Redirect /news/2013-09-30-lenskit-202.html https://github.com/grouplens/lenskit/releases/tag/lenskit-2.0.2
+Redirect /news/2013-09-17-lenskit-201.html https://github.com/grouplens/lenskit/releases/tag/lenskit-2.0.1
+Redirect /news/2013-09-02-lenskit-2.html https://github.com/grouplens/lenskit/releases/tag/lenskit-2.0.0
+Redirect /news/2013-08-16-lenskit-2.html https://github.com/grouplens/lenskit/releases/tag/lenskit-2.0-M1
