update API documentation locations

--- a/content/apache.conf
+++ b/content/apache.conf
@@ -1,7 +1,11 @@
 Redirect permanent /evaluating.html http://github.com/grouplens/lenskit/wiki/Evaluator
 RedirectMatch temp ^/devel(.*) http://dev.grouplens.org/lenskit/master$1
 Redirect permanent /release-notes.html /maven-site/releases/
-RedirectMatch permanent ^/apidocs(.*) /maven-site/apidocs$1
+
+RedirectMatch permanent ^/apidocs(.*) /current/apidocs$1
+RedirectMatch permanent ^/maven-site/apidocs(.*) /current/apidocs$1
+RedirectMatch permanent ^/current(/.*)? /2.0.5$1
+
 Redirect temp /mooc/ratings http://dev.grouplens.org/ratemovies
 Redirect permanent /download.html /downloads/
 Redirect temp /ML100K http://github.com/grouplens/lenskit/wiki/ML100K
