add release notes (grouplens/lenskit#558)

--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,47 @@ exclude:
   - package.json
   - Gruntfile.js
 
+defaults:
+  - scope:
+      path: "releases/"
+      type: page
+    values:
+      layout: "release"
+
 lenskit:
   version: 2.0.5
   prerelease: 2.1-M4
   next: 2.1
   downloadUrl: http://files.grouplens.org/lenskit
+  releases:
+    - 2.1
+    - 2.0.5
+    - 2.0.4
+    - 2.0.3.2
+    - 2.0.3
+    - 2.0.2
+    - 2.0.1
+    - 2.0
+    - 1.3
+    - 1.2
+    - 1.1
+    - 1.0.2
+    - 1.0.1
+    - 1.0
+    - 0.11
+    - 0.10
+    - 0.9
+    - 0.8
+    - 0.7
+    - 0.6
+    - 0.5
+    - 0.4
+    - 0.3
+    - 0.2
+    - 0.1
+    - 0.0.3
+    - 0.0.2
+    - 0.0.1
 
 markdown: kramdown
 
