--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,11 @@ defaults:
       type: page
     values:
       layout: "release"
+  - scope:
+      path: "news"
+    values:
+      layout: "default"
+      category: "news"
 
 lenskit:
   version: 2.0.5
