--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ exclude:
 defaults:
   - scope:
       path: "releases/"
-      type: page
+      type: pages
     values:
       layout: "release"
   - scope:
@@ -20,40 +20,6 @@ defaults:
     values:
       layout: "default"
       category: "news"
-
-lenskit:
-  version: 2.1
-  next: 2.2
-  downloadUrl: http://dl.bintray.com/lenskit/lenskit-releases
-  releases:
-    - 2.1
-    - 2.0.5
-    - 2.0.4
-    - 2.0.3.2
-    - 2.0.3
-    - 2.0.2
-    - 2.0.1
-    - 2.0
-    - 1.3
-    - 1.2
-    - 1.1
-    - 1.0.2
-    - 1.0.1
-    - 1.0
-    - 0.11
-    - 0.10
-    - 0.9
-    - 0.8
-    - 0.7
-    - 0.6
-    - 0.5
-    - 0.4
-    - 0.3
-    - 0.2
-    - 0.1
-    - 0.0.3
-    - 0.0.2
-    - 0.0.1
 
 markdown: kramdown
 
