--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,3 @@
-gems:
-  - jekyll-sitemap
-
 exclude:
   - Gemfile
   - Gemfile.lock
@@ -26,3 +23,7 @@ markdown: kramdown
 kramdown:
   input: kramdown
   hard_wrap: false
+
+sass:
+  load_paths:
+    - bower_components/foundation/scss
