--- a/_data/lenskit.yaml
+++ b/_data/lenskit.yaml
@@ -1,7 +1,8 @@
 version: 2.1
-prerelease: 2.2-M2
+prerelease: 2.2-M3
 next: 2.2
 downloadUrl: http://dl.bintray.com/lenskit/lenskit-releases
+preDownloadUrl: http://dl.bintray.com/lenskit/lenskit-snapshots
 releases:
   - 2.2
   - 2.1
