Fix release defaults

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ exclude:
 
 defaults:
   - scope:
-      path: "releases/"
+      path: releases
       type: pages
     values:
       layout: "release"
