Use Grunt to minify JavaScript

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,9 @@ exclude:
   - Gemfile.lock
   - config.rb
   - bower.json
+  - package.json
+  - node_modules
+  - Gruntfile.js
   - Vagrantfile
   - .vagrant
 
