--- a/package.json
+++ b/package.json
@@ -3,8 +3,27 @@
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-contrib-uglify": "~0.5.0"
+    "grunt-contrib-uglify": "~0.5.0",
+    "gulp": "^3.9.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.1"
   },
   "license": "UNLICENSED",
-  "repository": "lenskit/lenskit.github.io"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lenskit/lenskit.github.io.git"
+  },
+  "description": "lenskit.org ===========",
+  "bugs": {
+    "url": "https://github.com/lenskit/lenskit.github.io/issues"
+  },
+  "homepage": "https://github.com/lenskit/lenskit.github.io#readme",
+  "main": "gulpfile.js",
+  "dependencies": {
+    "lunr-index-build": "^0.0.1"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Michael Ekstrand <ekstrand@txstate.edu>"
 }
