--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp-ignore": "^2.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.1",
+    "js-yaml": "^3.5.2",
     "lunr": "^0.6.0",
     "through": "^2.3.8"
   },
