--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,10 @@ exclude:
 
 defaults:
   - scope:
+      type: pages
+    values:
+      index: true
+  - scope:
       path: releases
       type: pages
     values:
