--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "private": "true",
   "dependencies": {
     "foundation": "zurb/bower-foundation",
-    "highlightjs": "~8.0.0"
+    "highlightjs": "~8.0.0",
+    "pure": "^0.6.0"
   }
 }
