Add ignores for NixOS rebuilds

--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ exclude:
   - package.json
   - node_modules
   - Gruntfile.js
-  - Vagrantfile
-  - .vagrant
+  - result
+  - vendor
 
 defaults:
   - scope:
