--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "lenskit.github.io",
   "version": "0.1.0",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-uglify": "~0.5.0"
+    "ender": "^2.1.1",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-uglify": "^1.5.3"
   },
   "license": "UNLICENSED",
   "repository": "lenskit/lenskit.github.io",
   "dependencies": {
-    "ender": "^2.1.1",
-    "grunt-ender": "^0.2.1",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-uglify": "^1.5.3"
+    "bean": "^1.0",
+    "bonzo": "^2.0",
+    "qwery": "^4.0",
+    "ender-core": "^2.0",
+    "ender-commonjs": "^1.0"
   },
   "jshintConfig": {
     "esversion": 6
